Fixed the overlapping navbar (using rem).

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -11,3 +11,6 @@ body
   background-image: image-url("128-85.jpg")
   background-attachment: fixed
   font-size: 100%
+
+.container.body-content
+  padding-top: 4rem
