--- a/app/assets/stylesheets/navbar.sass
+++ b/app/assets/stylesheets/navbar.sass
@@ -2,6 +2,7 @@
 
 .bg-nav
   background-color: $color-primary-3
+  height: 4rem
   li
     margin: 4px
     a
